--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 VUE_APP_DB_URL_SIGNUP=https://identitytoolkit.googleapis.com/v1/accounts:signUp?key=
 VUE_APP_DB_URL_SIGNIN=https://identitytoolkit.googleapis.com/v1/accounts:signInWithPassword?key=
+VUE_APP_DB_URL_DELETE=https://identitytoolkit.googleapis.com/v1/accounts:delete?key=
 VUE_APP_API_KEY=AIzaSyD96WzLNkBKc3D5JhqdeuybEyv2OCsGEnM
 VUE_APP_DB_URL=https://library-vue-e43ff-default-rtdb.firebaseio.com/
 VUE_APP_BOOKS_API=https://api.itbook.store/1.0/
